--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,7 @@
         <spring.version>4.3.18.RELEASE</spring.version>
         <spring.security.version>4.2.7.RELEASE</spring.security.version>
         <tomcat8.version>8.5.31</tomcat8.version>
-        <wss4j.version>2.2.2-SNAPSHOT</wss4j.version>
+        <wss4j.version>2.2.2</wss4j.version>
 
         <tomcat.url>http://localhost:8080/manager/text</tomcat.url>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
