Adding source jars for the services

--- a/services/oidc/pom.xml
+++ b/services/oidc/pom.xml
@@ -126,6 +126,19 @@
                     </webResources>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <executions>
+                   <execution>
+                      <id>attach-sources</id>
+                      <phase>verify</phase>
+                      <goals>
+                         <goal>jar-no-fork</goal>
+                      </goals>
+                   </execution>
+                </executions>
+            </plugin>
         </plugins>
         <!-- Name of the generated WAR file -->
         <finalName>fediz-oidc</finalName>
