--- a/services/idp-core/pom.xml
+++ b/services/idp-core/pom.xml
@@ -277,6 +277,20 @@
                     </dependency>
                 </dependencies>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <executions>
+                   <execution>
+                      <id>attach-sources</id>
+                      <phase>verify</phase>
+                      <goals>
+                         <goal>jar-no-fork</goal>
+                      </goals>
+                   </execution>
+                </executions>
+            </plugin>
+
         </plugins>
     </build>
 
