--- a/examples/springWebapp/pom.xml
+++ b/examples/springWebapp/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>org.apache.cxf.fediz</groupId>
         <artifactId>examples</artifactId>
-        <version>1.4.4</version>
+        <version>1.4.4-SNAPSHOT</version>
     </parent>
     <groupId>org.apache.cxf.fediz.examples</groupId>
     <artifactId>springWebapp</artifactId>
