--- a/systests/federation/samlWebapp/pom.xml
+++ b/systests/federation/samlWebapp/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>org.apache.cxf.fediz.systests</groupId>
         <artifactId>fediz-systests-federation</artifactId>
-        <version>1.4.4</version>
+        <version>1.4.4-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <groupId>org.apache.cxf.fediz.systests.federation</groupId>
