--- a/plugins/cxf/pom.xml
+++ b/plugins/cxf/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>org.apache.cxf.fediz</groupId>
         <artifactId>plugin</artifactId>
-        <version>1.4.5-SNAPSHOT</version>
+        <version>1.4.4</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>fediz-cxf</artifactId>
