Publish classes for services

--- a/services/sts/pom.xml
+++ b/services/sts/pom.xml
@@ -107,6 +107,7 @@
                             </excludes>
                         </resource>
                     </webResources>
+                    <attachClasses>true</attachClasses>
                 </configuration>
             </plugin>
             <plugin>
