--- a/services/idp/pom.xml
+++ b/services/idp/pom.xml
@@ -110,6 +110,7 @@
                             </excludes>
                         </resource>
                     </webResources>
+                    <attachClasses>true</attachClasses>
                 </configuration>
             </plugin>
             <plugin>
