--- a/services/oidc/pom.xml
+++ b/services/oidc/pom.xml
@@ -124,6 +124,7 @@
                             </excludes>
                         </resource>
                     </webResources>
+                    <attachClasses>true</attachClasses>
                 </configuration>
             </plugin>
             <plugin>
