--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.apache.cxf.fediz</groupId>
     <artifactId>fediz</artifactId>
-    <version>1.4.5-SNAPSHOT</version>
+    <version>1.4.5</version>
     <name>Apache Fediz</name>
     <packaging>pom</packaging>
 
@@ -103,7 +103,7 @@
     <scm>
         <connection>scm:git:http://gitbox.apache.org/repos/asf/cxf-fediz.git</connection>
         <developerConnection>scm:git:https://gitbox.apache.org/repos/asf/cxf-fediz.git</developerConnection>
-      <tag>HEAD</tag>
+      <tag>fediz-1.4.5</tag>
   </scm>
 
     <issueManagement>
