Revert "[maven-release-plugin] prepare release fediz-1.4.5"
This reverts commit f07324e8d0a54c28fa0353396f2e31154ea8cff0.

--- a/plugins/jetty8/pom.xml
+++ b/plugins/jetty8/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>org.apache.cxf.fediz</groupId>
         <artifactId>plugin</artifactId>
-        <version>1.4.5</version>
+        <version>1.4.5-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>fediz-jetty8</artifactId>
