--- a/systests/jetty9/pom.xml
+++ b/systests/jetty9/pom.xml
@@ -32,6 +32,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <tomcat8.version>8.5.34</tomcat8.version>
     </properties>
     <dependencies>
         <dependency>
