--- a/systests/pom.xml
+++ b/systests/pom.xml
@@ -36,7 +36,7 @@
       <module>webapps</module>
       <module>custom</module>
       <module>jetty9</module>
-      <module>tomcat8</module>
+      <module>tomcat</module>
       <module>spring</module>
       <module>cxf</module>
       <module>federation</module>
