--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,7 @@
         <slf4j.version>1.7.25</slf4j.version>
         <spring.version>4.3.20.RELEASE</spring.version>
         <spring.security.version>4.2.9.RELEASE</spring.security.version>
+        <spring-webflow.version>2.4.8.RELEASE</spring-webflow.version>
         <tomcat.version>9.0.13</tomcat.version>
         <wss4j.version>2.2.2</wss4j.version>
 
