--- a/services/idp-core/pom.xml
+++ b/services/idp-core/pom.xml
@@ -98,7 +98,7 @@
         <dependency>
             <groupId>org.springframework.webflow</groupId>
             <artifactId>spring-webflow</artifactId>
-            <version>2.4.5.RELEASE</version>
+            <version>${spring-webflow.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.security</groupId>
