--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,7 @@
         <slf4j.version>1.7.25</slf4j.version>
         <spring.version>4.3.20.RELEASE</spring.version>
         <spring.security.version>4.2.9.RELEASE</spring.security.version>
+        <spring-webflow.version>2.4.8.RELEASE</spring-webflow.version>
         <tomcat7.version>7.0.92</tomcat7.version>
         <tomcat8.version>8.5.35</tomcat8.version>
         <woodstox.core.version>4.4.1</woodstox.core.version>
