--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,7 @@
         <servlet.version>2.5</servlet.version>
         <slf4j.version>1.7.25</slf4j.version>
         <spring.version>4.3.20.RELEASE</spring.version>
+        <spring-ldap-core.version>2.3.2.RELEASE</spring-ldap-core.version>
         <spring.security.version>4.2.9.RELEASE</spring.security.version>
         <spring-webflow.version>2.4.8.RELEASE</spring-webflow.version>
         <tomcat.version>9.0.13</tomcat.version>
