--- a/services/sts/pom.xml
+++ b/services/sts/pom.xml
@@ -74,7 +74,7 @@
         <dependency>
             <groupId>org.springframework.ldap</groupId>
             <artifactId>spring-ldap-core</artifactId>
-            <version>2.3.1.RELEASE</version>
+            <version>${spring-ldap-core.version}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
