--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,7 @@
         <commons.lang.version>3.5</commons.lang.version>
         <commons.logging.version>1.2</commons.logging.version>
         <commons.io.version>2.5</commons.io.version>
+        <commons.text.version>1.6</commons.text.version>
         <commons.validator.version>1.6</commons.validator.version>
         <cxf.version>3.1.17</cxf.version>
         <cxf.build-utils.version>3.2.0</cxf.build-utils.version>
