--- a/services/oidc/pom.xml
+++ b/services/oidc/pom.xml
@@ -82,6 +82,11 @@
             <artifactId>commons-lang3</artifactId>
             <version>${commons.lang.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-text</artifactId>
+            <version>${commons.text.version}</version>
+        </dependency>
         <!--
         <dependency>
             <groupId>org.apache.geronimo.specs</groupId>
