--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,7 @@
         <bval.version>1.1.2</bval.version>
         <commons.lang.version>3.5</commons.lang.version>
         <commons.logging.version>1.2</commons.logging.version>
+        <commons.text.version>1.6</commons.text.version>
         <commons.validator.version>1.6</commons.validator.version>
         <cxf.version>3.2.7</cxf.version>
         <cxf.build-utils.version>3.4.0</cxf.build-utils.version>
