Upgrade CXF to 3.3.x

--- a/examples/wsclientWebapp/webservice/common/pom.xml
+++ b/examples/wsclientWebapp/webservice/common/pom.xml
@@ -56,4 +56,17 @@
             </plugin>
         </plugins>
     </build>
+    <pluginRepositories>
+        <pluginRepository>
+            <id>apache.releases</id>
+            <url>https://repository.apache.org/content/repositories/releases/</url>
+            <name>Apache Releases Repo</name>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+        </pluginRepository>
+    </pluginRepositories>
 </project>
