--- a/pom.xml
+++ b/pom.xml
@@ -43,11 +43,13 @@
         <commons.logging.version>1.2</commons.logging.version>
         <commons.text.version>1.6</commons.text.version>
         <commons.validator.version>1.6</commons.validator.version>
-        <cxf.version>3.2.9</cxf.version>
+        <cxf.version>3.3.2</cxf.version>
         <cxf.build-utils.version>3.4.1</cxf.build-utils.version>
         <dbcp.version>2.1.1</dbcp.version>
         <easymock.version>4.0.2</easymock.version>
         <ehcache.version>2.10.6</ehcache.version>
+        <ehcache3.version>3.0.3</ehcache3.version>
+        <jcache.version>1.0.0</jcache.version>
         <hsqldb.version>2.4.1</hsqldb.version>
         <htmlunit.version>2.27</htmlunit.version>
         <jackson.version>2.9.9</jackson.version>
@@ -131,6 +133,17 @@
             </snapshots>
             <releases>
                 <enabled>false</enabled>
+            </releases>
+        </repository>
+        <repository>
+            <id>apache.staging</id>
+            <url>https://repository.apache.org/content/groups/staging/</url>
+            <name>Apache Snapshot Repo</name>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+            <releases>
+                <enabled>true</enabled>
             </releases>
         </repository>
         <repository>
