--- a/systests/federation/oidcIdpWebapp/pom.xml
+++ b/systests/federation/oidcIdpWebapp/pom.xml
@@ -45,16 +45,26 @@
             <version>${commons.lang.version}</version>
         </dependency>      
         <dependency>
-           <groupId>org.apache.cxf</groupId>
-           <artifactId>cxf-rt-frontend-jaxrs</artifactId>
-           <version>${cxf.version}</version>
-       </dependency>
-       <dependency>
-           <groupId>org.apache.cxf</groupId>
-           <artifactId>cxf-rt-rs-security-sso-oidc</artifactId>
-           <version>${cxf.version}</version>
-       </dependency>
-       <dependency>
+            <groupId>org.apache.cxf</groupId>
+            <artifactId>cxf-rt-frontend-jaxrs</artifactId>
+            <version>${cxf.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.cxf</groupId>
+            <artifactId>cxf-rt-rs-security-sso-oidc</artifactId>
+            <version>${cxf.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.cache</groupId>
+            <artifactId>cache-api</artifactId>
+            <version>${jcache.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.ehcache</groupId>
+            <artifactId>ehcache</artifactId>
+            <version>${ehcache3.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
             <version>${spring.version}</version>
